--- a/mandelbulber2/formula/ui/dIFS_cylinder.ui
+++ b/mandelbulber2/formula/ui/dIFS_cylinder.ui
@@ -451,10 +451,17 @@
           </layout>
          </item>
          <item>
-          <layout class="QGridLayout" name="gridLayout_10" columnstretch="0,1,1">
+          <layout class="QGridLayout" name="gridLayout_10" columnstretch="0,0,0">
            <property name="spacing">
             <number>2</number>
            </property>
+           <item row="2" column="0" colspan="3">
+            <widget class="Line" name="line_3">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
            <item row="3" column="0">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledP_false">
              <property name="font">
@@ -468,10 +475,10 @@
              </property>
             </widget>
            </item>
-           <item row="6" column="0">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledCx_false">
-             <property name="text">
-              <string notr="true">diagonal fold1</string>
+           <item row="5" column="0" colspan="3">
+            <widget class="Line" name="line_4">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
              </property>
             </widget>
            </item>
@@ -491,8 +498,45 @@
              </property>
             </widget>
            </item>
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_45">
+             <property name="text">
+              <string>poly fold integer</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="0">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledCx_false">
+             <property name="text">
+              <string notr="true">diagonal fold XY</string>
+             </property>
+            </widget>
+           </item>
            <item row="4" column="1">
             <widget class="MySpinBox" name="spinboxInt_transf_int_6">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="maximum">
+              <number>999</number>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="0">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledCy_false">
+             <property name="text">
+              <string notr="true">diagonal fold XZ</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="2">
+            <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_Cx">
              <property name="enabled">
               <bool>true</bool>
              </property>
@@ -523,29 +567,6 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="0">
-            <widget class="QLabel" name="label_45">
-             <property name="text">
-              <string>poly fold integer</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="2">
-            <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_Cx">
-             <property name="enabled">
-              <bool>true</bool>
-             </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="maximum">
-              <number>999</number>
-             </property>
-            </widget>
-           </item>
            <item row="6" column="1">
             <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_Cx">
              <property name="enabled">
@@ -562,17 +583,35 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="0" colspan="3">
-            <widget class="Line" name="line_3">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+           <item row="7" column="1">
+            <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_Cy">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="maximum">
+              <number>999</number>
              </property>
             </widget>
            </item>
-           <item row="5" column="0" colspan="3">
-            <widget class="Line" name="line_4">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+           <item row="7" column="2">
+            <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_Cy">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="maximum">
+              <number>999</number>
              </property>
             </widget>
            </item>
@@ -607,86 +646,45 @@
            <property name="spacing">
             <number>2</number>
            </property>
-           <item row="0" column="0">
+           <item row="2" column="1" colspan="2">
+            <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetC_0">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="prefix">
+              <string/>
+             </property>
+             <property name="suffix">
+              <string/>
+             </property>
+             <property name="decimals">
+              <number>6</number>
+             </property>
+             <property name="minimum">
+              <double>-99.989999999999995</double>
+             </property>
+             <property name="maximum">
+              <double>99.989999999999995</double>
+             </property>
+             <property name="singleStep">
+              <double>0.100000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
              <property name="text">
               <string notr="true">z.x</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
-             <property name="enabled">
-              <bool>true</bool>
-             </property>
-             <property name="text">
-              <string notr="true">z.y</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_43">
-             <property name="text">
-              <string>offset:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_38">
-             <property name="text">
-              <string>offset:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_D">
-             <property name="enabled">
-              <bool>true</bool>
-             </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="maximum">
-              <number>999</number>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="2">
-            <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_D">
-             <property name="enabled">
-              <bool>true</bool>
-             </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="maximum">
-              <number>999</number>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_C">
-             <property name="enabled">
-              <bool>true</bool>
-             </property>
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="maximum">
-              <number>999</number>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
+           <item row="1" column="2">
             <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_C">
              <property name="enabled">
               <bool>true</bool>
@@ -702,7 +700,14 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="1" colspan="2">
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_38">
+             <property name="text">
+              <string>offset:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1" colspan="2">
             <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetD_0">
              <property name="enabled">
               <bool>true</bool>
@@ -733,8 +738,15 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="1" colspan="2">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_offsetC_0">
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_43">
+             <property name="text">
+              <string>offset:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="2">
+            <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_D">
              <property name="enabled">
               <bool>true</bool>
              </property>
@@ -744,23 +756,50 @@
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
-             <property name="prefix">
-              <string/>
+             <property name="maximum">
+              <number>999</number>
              </property>
-             <property name="suffix">
-              <string/>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledD_false">
+             <property name="enabled">
+              <bool>true</bool>
              </property>
-             <property name="decimals">
-              <number>6</number>
+             <property name="text">
+              <string notr="true">z.y</string>
              </property>
-             <property name="minimum">
-              <double>-99.989999999999995</double>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_C">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
              </property>
              <property name="maximum">
-              <double>99.989999999999995</double>
+              <number>999</number>
              </property>
-             <property name="singleStep">
-              <double>0.100000000000000</double>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_D">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="maximum">
+              <number>999</number>
              </property>
             </widget>
            </item>
@@ -2084,7 +2123,7 @@
         <item row="1" column="0">
          <widget class="QLabel" name="label_53">
           <property name="text">
-           <string>abs(x*y)</string>
+           <string>abs(z.x*z.y)</string>
           </property>
          </widget>
         </item>
